trying to fix the alignment

--- a/css/style.css
+++ b/css/style.css
@@ -15,21 +15,30 @@ h1 {
     text-align: center;
 }
 
-img ,canvas{
+img {
 
     border-radius: 5px;
     padding: 0 auto;
     border: 1px solid #999999;
     margin-bottom: 10px;
+    margin: 0 auto;
 }
+canvas{
 
+  float: right;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
+  align-items: right;
+}
 #result {
-    width: 70%;
+    float:left;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     font-size: 20px;
     color: #E98977;
     font-weight: bold;
